--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,29 @@ proguard/
 
 # Android Studio captures folder
 captures/
+.idea/.name
+.idea/compiler.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/copyright/profiles_settings.xml
+.idea/libraries/adapter_rxjava_2_0_1.xml
+.idea/libraries/animated_vector_drawable_23_2_1.xml
+.idea/libraries/appcompat_v7_23_2_1.xml
+.idea/libraries/converter_gson_2_0_1.xml
+.idea/libraries/design_23_2_1.xml
+.idea/libraries/gson_2_6_2.xml
+.idea/libraries/okhttp_3_2_0.xml
+.idea/libraries/okio_1_6_0.xml
+.idea/libraries/play_services_appindexing_8_1_0.xml
+.idea/libraries/play_services_basement_8_1_0.xml
+.idea/libraries/recyclerview_v7_23_2_1.xml
+.idea/libraries/retrofit_2_0_1.xml
+.idea/libraries/rxandroid_1_1_0.xml
+.idea/libraries/rxjava_1_1_2.xml
+.idea/libraries/support_annotations_23_2_1.xml
+.idea/libraries/support_v4_23_2_1.xml
+.idea/libraries/support_vector_drawable_23_2_1.xml
